@@ -23,6 +23,7 @@
 package org.wandora.application.tools.extractors.guardian;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -106,7 +107,7 @@ public class GuardianContentSearchExtractor extends AbstractGuardianExtractor {
 							WandoraOptionPane.YES_NO_OPTION);
 					
 					if (didMean == WandoraOptionPane.YES_OPTION) {
-						URL newUrl = new URL(currentURL.replaceAll("&q=[^&]*", "&q=" + dym));
+						URL newUrl = new URI(currentURL.replaceAll("&q=[^&]*", "&q=" + dym)).toURL();
 						System.out.println(newUrl.toString());
 						this._extractTopicsFrom(newUrl, tm);
 					} 
@@ -190,13 +191,13 @@ public class GuardianContentSearchExtractor extends AbstractGuardianExtractor {
 									System.out.println("Selected to extract only next page");
 									String newURL = originalURL.replace("page=" + page, "page=" + (page + 1));
 									shouldHandlePagination = false;
-									_extractTopicsFrom(new URL(newURL), tm);
+									_extractTopicsFrom(new URI(newURL).toURL(), tm);
 								}
 
 								else if (pagingOptions[2].equals(a)) {
 									System.out.println("Selected to extract next page");
 									String newURL = originalURL.replace("page=" + page, "page=" + (page + 1));
-									_extractTopicsFrom(new URL(newURL), tm);
+									_extractTopicsFrom(new URI(newURL).toURL(), tm);
 								}
 
 								else if (pagingOptions[3].equals(a)) {
@@ -209,7 +210,7 @@ public class GuardianContentSearchExtractor extends AbstractGuardianExtractor {
 										String newURL = originalURL.replace("page=" + page, "page=" + p);
 										if (p == page + 10)
 											shouldHandlePagination = true;
-										_extractTopicsFrom(new URL(newURL), tm);
+										_extractTopicsFrom(new URI(newURL).toURL(), tm);
 										setProgress(progress++);
 										nap();
 									}
@@ -223,7 +224,7 @@ public class GuardianContentSearchExtractor extends AbstractGuardianExtractor {
 									int progress = 1;
 									for (int p = page + 1; p <= total && !forceStop(); p++) {
 										String newURL = originalURL.replace("page=" + page, "page=" + p);
-										_extractTopicsFrom(new URL(newURL), tm);
+										_extractTopicsFrom(new URI(newURL).toURL(), tm);
 										setProgress(progress++);
 										nap();
 									}
@@ -297,9 +298,9 @@ public class GuardianContentSearchExtractor extends AbstractGuardianExtractor {
 
 			if (result.has("fields")) {
 				JSONObject fields = result.getJSONObject("fields");
-				Iterator keys = fields.keys();
+				Iterator<String> keys = fields.keys();
 				while (keys.hasNext()) {
-					String key = keys.next().toString();
+					String key = keys.next();
 					Topic type = getFieldType(tm, key);
 					if (toAsso.contains(key)) {
 						parseFieldAssociation(fields, key, tm, contentTopic, type);
