@@ -30,7 +30,7 @@ package org.wandora.application.tools.importers.graphs;
 
 import java.awt.Component;
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
@@ -115,7 +115,7 @@ public class AdjacencyListImportDialog extends javax.swing.JDialog {
             StringBuilder sb = new StringBuilder("");
             for(String url : urls) {
                 try {
-                    sb.append(IObox.doUrl(new URL(url)));
+                    sb.append(IObox.doUrl(new URI(url).toURL()));
                 }
                 catch(Exception e) {
                     parentTool.log(e);
@@ -209,7 +209,7 @@ public class AdjacencyListImportDialog extends javax.swing.JDialog {
     private void selectContextSLFiles() {
         if(parentTool == null) return;
         Context context = parentTool.getContext();
-        Iterator iter = context.getContextObjects();
+        Iterator<?> iter = context.getContextObjects();
         Object o = null;
         Topic t = null;
         Locator locator = null;
@@ -246,7 +246,7 @@ public class AdjacencyListImportDialog extends javax.swing.JDialog {
     private void selectContextSLs() {
         if(parentTool == null) return;
         Context context = parentTool.getContext();
-        Iterator iter = context.getContextObjects();
+        Iterator<?> iter = context.getContextObjects();
         Object o = null;
         Topic t = null;
         Locator locator = null;
@@ -281,7 +281,7 @@ public class AdjacencyListImportDialog extends javax.swing.JDialog {
     private void selectContextSIs() {
         if(parentTool == null) return;
         Context context = parentTool.getContext();
-        Iterator iter = context.getContextObjects();
+        Iterator<?> iter = context.getContextObjects();
         Object o = null;
         Topic t = null;
         Locator locator = null;
